--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -3,7 +3,7 @@ name = "swamp-core"
 version = "0.1.10"
 edition = "2024"
 license = "MIT"
-repository = "https://github.com/swamp/script"
+repository = "https://github.com/swamp/swamp"
 description = "core module for Swamp"
 
 [dependencies]
