--- a/crates/examples/Cargo.toml
+++ b/crates/examples/Cargo.toml
@@ -3,7 +3,7 @@ name = "swamp-examples"
 version = "0.0.1"
 edition = "2024"
 license = "MIT"
-repository = "https://github.com/swamp/script"
+repository = "https://github.com/swamp/swamp"
 description = "Swamp integration examples"
 
 [dependencies]
