--- a/crates/vm-disasm/Cargo.toml
+++ b/crates/vm-disasm/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.10"
 edition = "2024"
 license = "MIT"
 description = "disassembler for the opcodes in the swamp vm"
-repository = "https://github.com/swamp/script"
+repository = "https://github.com/swamp/swamp"
 
 
 [dependencies]
