--- a/crates/ast/Cargo.toml
+++ b/crates/ast/Cargo.toml
@@ -3,7 +3,7 @@ name = "swamp-ast"
 version = "0.1.10"
 edition = "2024"
 license = "MIT"
-repository = "https://github.com/swamp/script"
-description = "ast types for swamp script"
+repository = "https://github.com/swamp/swamp"
+description = "ast types for swamp"
 
 [dependencies]
