--- a/crates/code-gen-program/Cargo.toml
+++ b/crates/code-gen-program/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.10"
 edition = "2024"
 license = "MIT"
 description = "converts a Swamp program to swamp-vm opcodes"
-repository = "https://github.com/swamp/script"
+repository = "https://github.com/swamp/swamp"
 
 [dependencies]
 swamp-code-gen = { path = "../code-gen", version = "0.1.10" }
