--- a/crates/dep-loader/Cargo.toml
+++ b/crates/dep-loader/Cargo.toml
@@ -3,8 +3,8 @@ name = "swamp-dep-loader"
 version = "0.1.10"
 edition = "2024"
 license = "MIT"
-repository = "https://github.com/swamp/script"
-description = "dependency parser and loader for swamp script"
+repository = "https://github.com/swamp/swamp"
+description = "dependency parser and loader for swamp"
 
 [dependencies]
 tracing = "0.1.40"
