--- a/crates/eval-loader/Cargo.toml
+++ b/crates/eval-loader/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.10"
 edition = "2024"
 license = "MIT"
 description = "load swamp-scripts"
-repository = "https://github.com/swamp/script"
+repository = "https://github.com/swamp/swamp"
 
 [dependencies]
 swamp-dep-loader = { path = "../dep-loader", version = "0.1.10" }
