--- a/crates/eval/Cargo.toml
+++ b/crates/eval/Cargo.toml
@@ -3,8 +3,8 @@ name = "swamp-eval"
 version = "0.1.10"
 edition = "2024"
 license = "MIT"
-repository = "https://github.com/swamp/script"
-description = "interpreter for swamp script"
+repository = "https://github.com/swamp/swamp"
+description = "interpreter for swamp"
 
 [dependencies]
 swamp-semantic = { path = "../semantic", version = "0.1.10" }
