--- a/crates/modules/Cargo.toml
+++ b/crates/modules/Cargo.toml
@@ -3,7 +3,7 @@ name = "swamp-modules"
 version = "0.1.10"
 edition = "2024"
 license = "MIT"
-repository = "https://github.com/swamp/script"
+repository = "https://github.com/swamp/swamp"
 description = "Module support for Swamp"
 
 [dependencies]
