--- a/crates/node/Cargo.toml
+++ b/crates/node/Cargo.toml
@@ -3,7 +3,7 @@ name = "swamp-node"
 version = "0.1.10"
 edition = "2024"
 license = "MIT"
-repository = "https://github.com/swamp/script"
+repository = "https://github.com/swamp/swamp"
 description = "compiler node with documentation and meta information"
 
 [dependencies]
