--- a/crates/semantic/Cargo.toml
+++ b/crates/semantic/Cargo.toml
@@ -3,8 +3,8 @@ name = "swamp-semantic"
 version = "0.1.10"
 edition = "2024"
 license = "MIT"
-repository = "https://github.com/swamp/script"
-description = "semantic types for swamp script"
+repository = "https://github.com/swamp/swamp"
+description = "semantic types for swamp"
 
 [dependencies]
 seq-map = "0.0.13"
