--- a/crates/std/Cargo.toml
+++ b/crates/std/Cargo.toml
@@ -3,7 +3,7 @@ name = "swamp-std"
 version = "0.1.10"
 edition = "2024"
 license = "MIT"
-repository = "https://github.com/swamp/script"
+repository = "https://github.com/swamp/swamp"
 description = "standard library for swamp"
 
 [dependencies]
