--- a/crates/swamp/Cargo.toml
+++ b/crates/swamp/Cargo.toml
@@ -3,7 +3,7 @@ name = "swamp"
 version = "0.1.10"
 edition = "2024"
 license = "MIT"
-repository = "https://github.com/swamp/script"
+repository = "https://github.com/swamp/swamp"
 description = "script language for embedding"
 
 [dependencies]
