--- a/crates/types/Cargo.toml
+++ b/crates/types/Cargo.toml
@@ -3,7 +3,7 @@ name = "swamp-types"
 version = "0.1.10"
 edition = "2024"
 license = "MIT"
-repository = "https://github.com/swamp/script"
+repository = "https://github.com/swamp/swamp"
 description = "types used in Swamp"
 
 
