--- a/crates/vm-host/Cargo.toml
+++ b/crates/vm-host/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.10"
 edition = "2024"
 license = "MIT"
 description = "host interface for the swamp VM"
-repository = "https://github.com/swamp/script"
+repository = "https://github.com/swamp/swamp"
 
 [dependencies]
 swamp-vm = {path= "../vm", version = "0.1.10" }
