--- a/crates/vm/Cargo.toml
+++ b/crates/vm/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.10"
 edition = "2024"
 license = "MIT"
 description = "Minimial virtual machine"
-repository = "https://github.com/swamp/script"
+repository = "https://github.com/swamp/swamp"
 
 
 [dependencies]
