--- a/crates/core-extra/Cargo.toml
+++ b/crates/core-extra/Cargo.toml
@@ -4,17 +4,16 @@ version = "0.1.10"
 edition = "2024"
 license = "MIT"
 repository = "https://github.com/swamp/swamp"
-description = "core parts for swamp evaluator"
-
+description = "Rust runtime implementations for Swamp core library collections (Vec, Map, Grid, Stack, etc.)."
 
 [dependencies]
 swamp-semantic = { path = "../semantic", version = "0.1.10" }
 swamp-types = { path = "../types", version = "0.1.10" }
 swamp-node = { path = "../node", version = "0.1.10" }
+
 fixed32 = "0.0.17"
 seq-map = "0.0.13"
-sparse-slot =  { version = "0.0.4"}
-tracing = "0.1.40"
+sparse-slot = "0.0.4"
 
 [dev-dependencies]
 test-log = { version = "0.2.16", features = ["trace", "log", "color"] }
