--- a/crates/vm-types/Cargo.toml
+++ b/crates/vm-types/Cargo.toml
@@ -3,7 +3,7 @@ name = "swamp-vm-types"
 version = "0.1.10"
 edition = "2024"
 license = "MIT"
-description = "shared types for the swamp VM"
+description = "Low-level types for memory layout, addresses, and instructions used by the Swamp Virtual Machine (VM)."
 repository = "https://github.com/swamp/swamp"
 
 [dependencies]
