--- a/crates/code-gen/Cargo.toml
+++ b/crates/code-gen/Cargo.toml
@@ -14,9 +14,10 @@ swamp-vm-disasm = { path = "../vm-disasm", version = "0.1.10" }
 
 # Swamp
 swamp-semantic = { path = "../semantic", version = "0.1.10" }
-swamp-node = { path = "../node", version = "0.1.10" }
 swamp-types = { path = "../types", version = "0.1.10" }
 
+# Source Map
+swamp-node = { path = "../node", version = "0.1.10" }
 swamp-source-map-lookup = { path = "../source-map-lookup", version = "0.1.10" }
 
 
