--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.10"
 edition = "2024"
 license = "MIT"
 repository = "https://github.com/swamp/swamp"
-description = "core module for Swamp"
+description = "Initializes the Swamp core library module, defining primitive type aliases and registering intrinsic functions."
 
 [dependencies]
 swamp-semantic = { path = "../semantic", version = "0.1.10" }
