--- a/crates/eval/Cargo.toml
+++ b/crates/eval/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.10"
 edition = "2024"
 license = "MIT"
 repository = "https://github.com/swamp/swamp"
-description = "interpreter for swamp"
+description = "Simple tree-walking interpreter for executing the Swamp Abstract Semantic Graph (ASG) from `swamp-semantic`. Primarily for debugging/testing, not performance."
 
 [dependencies]
 # Semantic
