--- a/crates/compile/Cargo.toml
+++ b/crates/compile/Cargo.toml
@@ -26,10 +26,12 @@ swamp-std = { path = "../std", version = "0.1.10" }
 swamp-pretty-print = { path = "../pretty-print", version = "0.1.10" }
 
 swamp-dep-loader = { path = "../dep-loader", version = "0.1.10" }
-swamp-eval-loader = { path = "../eval-loader", version = "0.1.10" }
+swamp-program-analyzer = { path = "../program-analyzer", version = "0.1.10" }
 swamp-source-map-lookup = { path = "../source-map-lookup", version = "0.1.10" }
 
-time-dilation = { path = "../time-dilation", version = "0.1.10", features = ["enable_summary"] }
+time-dilation = { path = "../time-dilation", version = "0.1.10", features = [
+    "enable_summary",
+] }
 
 
 tracing = "0.1.40"
