--- a/crates/err/Cargo.toml
+++ b/crates/err/Cargo.toml
@@ -11,7 +11,7 @@ swamp-semantic = { path = "../semantic", version = "0.1.10" }
 swamp-node = { path = "../node", version = "0.1.10" }
 swamp-source-map = { path = "../source-map", version = "0.1.10" }
 swamp-dep-loader = { path = "../dep-loader", version = "0.1.10" }
-swamp-eval-loader = { path = "../eval-loader", version = "0.1.10" }
+swamp-program-analyzer = { path = "../program-analyzer", version = "0.1.10" }
 
 swamp-eval = { path = "../eval", version = "0.1.10" }
 swamp-analyzer = { path = "../analyzer", version = "0.1.10" }
