--- a/crates/swamp/Cargo.toml
+++ b/crates/swamp/Cargo.toml
@@ -30,7 +30,7 @@ swamp-std = { path = "../std", version = "0.1.10" }
 
 
 swamp-dep-loader = { path = "../dep-loader", version = "0.1.10" }
-swamp-eval-loader = { path = "../eval-loader", version = "0.1.10" }
+swamp-program-analyzer = { path = "../program-analyzer", version = "0.1.10" }
 swamp-source-map-lookup = { path = "../source-map-lookup", version = "0.1.10" }
 
 # Runner
