--- a/crates/compile/Cargo.toml
+++ b/crates/compile/Cargo.toml
@@ -1,13 +1,12 @@
 [package]
 name = "swamp-compile"
-version = "0.1.10"
+version = "0.1.11"
 edition = "2024"
 license = "MIT"
 repository = "https://github.com/swamp/swamp"
 description = "Compile utility functions"
 
 [dependencies]
-swamp-source-map = { path = "../source-map", version = "0.1.10" }
 # Ast and Parser
 swamp-parser = { path = "../parser", version = "0.1.10" }
 swamp-ast = { path = "../ast", version = "0.1.10" }
@@ -16,8 +15,9 @@ swamp-ast = { path = "../ast", version = "0.1.10" }
 swamp-semantic = { path = "../semantic", version = "0.1.10" }
 swamp-analyzer = { path = "../analyzer", version = "0.1.10" }
 swamp-error-report = { path = "../err", version = "0.1.10" }
-
 swamp-modules = { path = "../modules", version = "0.1.10" }
+swamp-dep-loader = { path = "../dep-loader", version = "0.1.10" }
+swamp-program-analyzer = { path = "../program-analyzer", version = "0.1.10" }
 
 # Core and Std
 swamp-core = { path = "../core", version = "0.1.10" }
@@ -25,20 +25,18 @@ swamp-std = { path = "../std", version = "0.1.10" }
 
 swamp-pretty-print = { path = "../pretty-print", version = "0.1.10" }
 
-swamp-dep-loader = { path = "../dep-loader", version = "0.1.10" }
-swamp-program-analyzer = { path = "../program-analyzer", version = "0.1.10" }
+# Source Map
 swamp-source-map-lookup = { path = "../source-map-lookup", version = "0.1.10" }
+swamp-source-map = { path = "../source-map", version = "0.1.10" }
 
 time-dilation = { path = "../time-dilation", version = "0.1.10", features = [
     "enable_summary",
 ] }
 
-
 tracing = "0.1.40"
 regex = "1.11.1"
 tiny-ver = "0.1.2"
 seq-map = "0.0.13"
-
 
 [dev-dependencies]
 test-log = { version = "0.2.16", features = ["trace", "log", "color"] }
