--- a/crates/code-gen-program/Cargo.toml
+++ b/crates/code-gen-program/Cargo.toml
@@ -7,13 +7,21 @@ description = "converts a Swamp program to swamp-vm opcodes"
 repository = "https://github.com/swamp/swamp"
 
 [dependencies]
-swamp-code-gen = { path = "../code-gen", version = "0.1.10" }
-swamp-compile = { path = "../compile", version = "0.1.10" }
-swamp-types = { path = "../types", version = "0.1.10" }
+
+# Compilation
 swamp-semantic = { path = "../semantic", version = "0.1.10" }
 swamp-modules = { path = "../modules", version = "0.1.10" }
-swamp-source-map-lookup = { path = "../source-map-lookup", version = "0.1.10" }
+swamp-types = { path = "../types", version = "0.1.10" }
+
+# REMOVE
+swamp-compile = { path = "../compile", version = "0.1.10" } # TODO: Only needed for `Program` which should not be defined there.
+
+# Code Generation
+swamp-code-gen = { path = "../code-gen", version = "0.1.10" }
 swamp-vm-disasm = { path = "../vm-disasm", version = "0.1.10" }
+
+# Source Map
+swamp-source-map-lookup = { path = "../source-map-lookup", version = "0.1.10" }
 
 tracing = "0.1.40"
 seq-map = "0.0.13"
