--- a/crates/modules/Cargo.toml
+++ b/crates/modules/Cargo.toml
@@ -9,7 +9,7 @@ description = "Module support for Swamp"
 [dependencies]
 swamp-semantic = { path = "../semantic", version = "0.1.10" }
 swamp-types = { path = "../types", version = "0.1.10" }
-swamp-node = { path = "../node", version = "0.1.10" }
+source-map-node = "0.0.1"
 
 seq-map = "0.0.13"
 tiny-ver = "0.1.2"
