--- a/crates/vm-test/Cargo.toml
+++ b/crates/vm-test/Cargo.toml
@@ -16,7 +16,7 @@ swamp-types = { path = "../types", version = "0.1.10" }
 swamp-semantic = { path = "../semantic", version = "0.1.10" }
 swamp-vm-disasm = { path = "../vm-disasm", version = "0.1.10" }
 swamp-code-gen-program = { path = "../code-gen-program", version = "0.1.10" }
-swamp-source-map-lookup = { path = "../source-map-lookup", version = "0.1.10" }
+source-map-cache = "0.0.1"
 
 tracing = "0.1.40"
 seq-map = "0.0.13"
