--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -11,7 +11,7 @@ swamp-semantic = { path = "../semantic", version = "0.1.10" }
 swamp-types = { path = "../types", version = "0.1.10" }
 swamp-modules = { path = "../modules", version = "0.1.10" }
 
-swamp-node = { path = "../node", version = "0.1.10" }
+source-map-node = "0.0.1"
 
 tiny-ver = "0.1.2"
 
