--- a/crates/dep-loader/Cargo.toml
+++ b/crates/dep-loader/Cargo.toml
@@ -9,8 +9,8 @@ description = "Parses Swamp modules, scans for dependencies (`mod` and `use`), a
 [dependencies]
 swamp-ast = { path = "../ast", version = "0.1.10" }
 swamp-parser = { path = "../parser", version = "0.1.10" }
-swamp-source-map = { path = "../source-map", version = "0.1.10" }
+source-map-cache = "0.0.1"
 
 seq-map = "0.0.13"
-time-dilation = { path = "../time-dilation", version = "0.1.10" }
+time-dilation = "0.1.10"
 dirs = "6.0.0"
