--- a/crates/err/Cargo.toml
+++ b/crates/err/Cargo.toml
@@ -8,13 +8,13 @@ repository = "https://github.com/swamp/swamp"
 
 [dependencies]
 swamp-semantic = { path = "../semantic", version = "0.1.10" }
-swamp-node = { path = "../node", version = "0.1.10" }
-swamp-source-map = { path = "../source-map", version = "0.1.10" }
+source-map-node = "0.0.1"
+source-map-cache = "0.0.1"
 swamp-dep-loader = { path = "../dep-loader", version = "0.1.10" }
 swamp-program-analyzer = { path = "../program-analyzer", version = "0.1.10" }
 
 swamp-eval = { path = "../eval", version = "0.1.10" }
 swamp-analyzer = { path = "../analyzer", version = "0.1.10" }
 swamp-parser = { path = "../parser", version = "0.1.10" }
-eira = { path = "../eira", version = "0.1.10" }
+eira = "0.1.10"
 yansi = "1.0.1"
