--- a/crates/eval/Cargo.toml
+++ b/crates/eval/Cargo.toml
@@ -15,8 +15,8 @@ swamp-types = { path = "../types", version = "0.1.10" }
 swamp-core-extra = { path = "../core-extra", version = "0.1.10" }
 
 # Source Map
-swamp-node = { path = "../node", version = "0.1.10" }
-swamp-source-map-lookup = { path = "../source-map-lookup", version = "0.1.10" }
+source-map-node = "0.0.1"
+source-map-cache = "0.0.1"
 
 fixed32 = "0.0.17"
 seq-map = "0.0.13"
