--- a/crates/pretty-print/Cargo.toml
+++ b/crates/pretty-print/Cargo.toml
@@ -10,7 +10,7 @@ description = "Pretty-prints Swamp compiler internal representations (Semantic G
 swamp-semantic = { path = "../semantic", version = "0.1.10" }
 swamp-modules = { path = "../modules", version = "0.1.10" }
 swamp-types = { path = "../types", version = "0.1.10" }
-swamp-source-map-lookup = { path = "../source-map-lookup", version = "0.1.10" }
+source-map-cache = "0.0.1"
 
 tracing = "0.1.40"
 seq-map = "0.0.13"
