--- a/crates/compile/Cargo.toml
+++ b/crates/compile/Cargo.toml
@@ -19,9 +19,8 @@ swamp-modules = { path = "../modules", version = "0.1.10" }
 swamp-dep-loader = { path = "../dep-loader", version = "0.1.10" }
 swamp-program-analyzer = { path = "../program-analyzer", version = "0.1.10" }
 
-# Core and Std
+# Core
 swamp-core = { path = "../core", version = "0.1.10" }
-swamp-std = { path = "../std", version = "0.1.10" }
 
 swamp-pretty-print = { path = "../pretty-print", version = "0.1.10" }
 
