--- a/crates/analyzer/Cargo.toml
+++ b/crates/analyzer/Cargo.toml
@@ -16,5 +16,6 @@ swamp-modules = { path = "../modules", version = "0.1.11" }
 
 seq-map = "0.0.13"
 seq-set = "0.0.2"
+tracing = "0.1.40"
 
 [dev-dependencies]
